fix gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,9 @@ ol {
 }
 
 .main-contents {
-    padding: 88px 10px 0 80px;
+    padding: 32px 40px 0 80px;
     box-sizing: border-box;
-    margin-right: 40px;
+    margin-right: 60px;
 }
 
 /* Sidebar */
@@ -180,11 +180,15 @@ ol {
     margin-bottom: 8px;
 }
 
-.my-project-item {
-    color: #000;
-font-size: 14px;
-font-weight: 700;
-line-height: 24px; /* 171.429% */
+.my-projects-item {
+    /* color: #000; */
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+display: flex;
+flex-direction: column;
+/* padding-left: 0; */
+margin-bottom: 20px;
 }
 
 p {
@@ -196,7 +200,7 @@ p {
 }
 
 .my-projects-list {
-    padding-left: 16px;
+    padding-left: 0;
 }
 
 .my-projects-item-link {
